# prometheus-biomysterybench

./: .gitignore  README.md  RESULTS.md  pyproject.toml
blog/: the-best-biology-ai-wont-do-biology.md
docker/biomystery/: Dockerfile
prometheus_biomystery/: __init__.py  biomystery.py  fusion.py
prometheus_biomysterybench/: biomystery.py
scripts/: build_biomystery_env.sh  docker_shell_mcp.py  regrade.py  run_biomystery_preview_container.sh  run_biomystery_self_solve.sh  setup_blastdb.sh  setup_diamond_db.sh
tests/: test_biomystery.py
