[project]
name = "prometheus-biomystery"
version = "0.1.0"
description = "Local, reproducible harness for the BioMysteryBench public preview, with Dockerized bioinformatics tools, local BLAST databases, and a local-claude self-solve mode."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lore Hex Corp" }]
keywords = ["llm", "benchmark", "bioinformatics", "blast", "evals", "biomysterybench"]
dependencies = ["huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/Lore-Hex/prometheus-biomystery"
Issues = "https://github.com/Lore-Hex/prometheus-biomystery/issues"
Companion = "https://github.com/Lore-Hex/PrometheusBench"

[project.scripts]
prometheus-biomystery = "prometheus_biomystery.biomystery:main"

[tool.setuptools.packages.find]
include = ["prometheus_biomystery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
